        ======= plasma release 0.8.9 (v0_8_9) on Linux (cde-tx32-ldt189) =======

2005-01-17  Brian Kahne  <bkahne@ibmoto.com>

	* Changed the clear() functions- they simply do a get() if ready()
	is true.  This was because the other behavior of clear() could
	lead to non-deterministic behavior and runaway conditions.

	* Added a zero-size capability to clocked channels and made this
	the default size.  If the size is 0, a write will block until a
	read removes the data.  This lets you do a fully interlocked
	pipeline.

	* Fixed a bug with priorities- terminate now adds all waiters,
	then queries for the next ready thread.  This fixes a problem
	whereby we used to get the next ready thread before adding the
	waiters which could result in us executing a lower-priority thread
	before others of higher priority.
	
        ======= plasma release 0.8.8 (v0_8_8) on Linux (cde-tx32-ldt189) =======

2005-01-04  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed bug with pLowestPriority(): It was returning 0, rather
	than the 1 less than the total number of priorities (which is the
	lowest priority from the user's point of view).  Modified pri2 to
	test this.

        ======= plasma release 0.8.7 (v0_8_7) on Linux (cde-tx32-ldt189) =======

2004-12-22  Brian Kahne  <bkahne@ibmoto.com>

	* Fixed bug:  We could get a crash if we tried accessing the
	current priority from a global constructor because the current
	processor wasn't set up yet.  I now return the lowest priority in
	such a situation.

2004-12-22  Brian Kahne  <bkahne@ibmoto.com>

	* Created a simple broadcaster template that takes input from a
	channel and writes it to its output channels, clearing them
	first.  Added a convenience class for clocked channels that
	creates a broadcaster with an input clocked channel and an output
	that's non-clocked.  The channels are cleared so that the
	broadcast can be ignored without backing anything up, e.g. if one
	consumer doesn't care, the data is wiped out on the next read.
