@@ -75,8 +75,8 @@ private:
   void convertToThread(Ptree* &elist,Ptree* &thnames,Ptree *expr,VarWalker *vw,
                        Environment *env,bool heapalloc);
   Ptree *generateAltBlock(Environment *env,const PortList &pv,Ptree *defaultblock);
-  Ptree *generateAltBody(Environment *env,Ptree *cur,Ptree *label,Ptree *handle,Ptree *uflag,
-                         Ptree *doover,const PortList &pv,Ptree *defaultblock);
+  Ptree *generateAltBody(Environment *env,Ptree *cur,Ptree *label,
+                         Ptree *handle,const PortList &pv,Ptree *defaultblock);
   bool parseAforCondition(VarWalker *vs,Environment *env,Ptree *s1,Ptree *s3);
   bool parseAltBody(Environment *env,Ptree *rest,PortList &pv,Ptree* &defaultblock,bool reverse);
   bool parseAforBody(Environment *env,Ptree *rest,PortList &pv,Ptree* &defaultblock);
